<resources>
    <string name="app_name">Craftify Wallpapers</string>
    <string name="search_string">Search category</string>

    <string-array name="numbers_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>

    <string-array name="time_format_array">
        <item>minutes</item>
        <item>hours</item>
    </string-array>
    <string name="nav_header_title">Craftify</string>
    <string name="nav_header_subtitle">craftify.wallpapers@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="tap_to_turn_on_or_off_auto">Tap to turn on or off</string>
    <string name="duration_auto">Duration</string>

    <string name="UNIT_ID_BANNER">ca-app-pub-2724635946881674/5441771166</string>
    <string name="UNIT_ID_BANNER2">ca-app-pub-2724635946881674/7276477451</string>
    <string name="craftify">Craftify</string>
    <string name="fav">Favourites</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="auto_changer">Automatically change wallpapers</string>
    <string name="info_1">• Use this feature to set a new wallpaper every time you unlock your device.</string>
    <string name="info_2">• Your device should be at least 20% Charged.</string>
    <string name="info_3">• No need of internet, wallpapers will be taken from your favourites.</string>
    <string name="info_4">• The wallpapers will be set in portrait mode.</string>
    <string name="info_5">• The Feature will work on all android devices.</string>
    <string name="lockscreen">Lock screen</string>
    <string name="lockscreen_summary">Some customised UI may prevent changing lock screen</string>
    <string name="walp_by">Wallpapers by Pexels</string>
    <string name="contact">Contact the app developer</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_the_developer">Contact the developer</string>
    <string name="automatic_change">Automatic wallpapers</string>
    <string name="editor_s_collection">Editor\'s collection</string>
    <string name="favourites">Favourites</string>
    <string name="communicate">Communicate</string>
</resources>
