<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_black_24dp"
            
            android:title="@string/favourites" />
        <item
            android:id="@+id/editor_trending_nav"
            android:icon="@drawable/ic_photo_filter_black_24dp"
            android:title="@string/editor_s_collection" />
        <item
            android:id="@+id/nav_auto_wallpaper"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/automatic_change" />


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item android:id="@+id/privacy_policy"
                android:icon="@drawable/ic_screen_lock_portrait_24dp"
                android:title="@string/privacy_policy"
                />
            <item
                android:id="@+id/rate_us"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/rate_the_app" />
            <item
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="@string/contact_the_developer" />


        </menu>
    </item>

</menu>
